@@ -52,7 +52,7 @@ public class DatabricksResultSetMetaDataTest {
     ColumnInfo col2 = getColumn("col2", ColumnInfoTypeName.STRING, "string");
     ColumnInfo col2dup = getColumn("col2", ColumnInfoTypeName.DOUBLE, "double");
     ColumnInfo col3 = getColumn("col5", null, "double");
-    schema.setColumns(List.of(col1, col2, col2dup, col3));
+    schema.setColumns(Arrays.asList(col1, col2, col2dup, col3));
     manifest.setSchema(schema);
     return manifest;
   }
@@ -81,10 +81,10 @@ public class DatabricksResultSetMetaDataTest {
     metaData =
         new DatabricksResultSetMetaData(
             STATEMENT_ID,
-            List.of("col1", "col2", "col2"),
-            List.of("int", "string", "double"),
-            List.of(4, 12, 8),
-            List.of(0, 0, 0),
+            Arrays.asList("col1", "col2", "col2"),
+            Arrays.asList("int", "string", "double"),
+            Arrays.asList(4, 12, 8),
+            Arrays.asList(0, 0, 0),
             10);
     assertEquals(3, metaData.getColumnCount());
     assertEquals("col1", metaData.getColumnName(1));
@@ -177,10 +177,10 @@ public class DatabricksResultSetMetaDataTest {
     metaData =
         new DatabricksResultSetMetaData(
             STATEMENT_ID,
-            List.of("col1", "col2", "col2"),
-            List.of("int", "string", "double"),
-            List.of(4, 12, 8),
-            List.of(0, 0, 0),
+            Arrays.asList("col1", "col2", "col2"),
+            Arrays.asList("int", "string", "double"),
+            Arrays.asList(4, 12, 8),
+            Arrays.asList(0, 0, 0),
             10);
     assertEquals(3, metaData.getColumnCount());
     verifyDefaultMetadataProperties(metaData);
